# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
apps/blog/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_initial.py  0003_blogpost_view_count.py  0004_alter_blogpost_view_count.py
apps/blog/services/: blog_service.py
apps/core/: admin.py  dashboard.py  exceptions.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_link.py
apps/core/services/: contact_service.py  health_service.py  link_service.py
apps/portfolio/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py  0002_project_challenges_project_feature_items_and_more.py
apps/portfolio/services/: media_service.py  project_service.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_users_public_updated_idx.py
apps/users/services/: profile_service.py
config/: api_urls.py  urls.py
config/settings/: __init__.py  dev.py  env.py  prod.py  shared.py  test.py
docs/: betterstack-monitoring.md  render-deploy.md  ssl-certbot.md  vps-docker-deploy.md
infra/nginx/: default.conf
tests/: test_api.py
